[gd_scene load_steps=6 format=3 uid="uid://bu0llecu4l60l"]

[ext_resource type="Script" uid="uid://d65llrk5v5av" path="res://Scripts/Title.gd" id="1_aa56r"]
[ext_resource type="Texture2D" uid="uid://cjs2q4vqxtln5" path="res://Assets/Static/Logo.png" id="2_agd63"]
[ext_resource type="ButtonGroup" uid="uid://dqgm5n3xmwas1" path="res://Scenes/TitleDifficultyGroup.tres" id="3_mh4yb"]
[ext_resource type="TileSet" uid="uid://guejpwtmoju1" path="res://GameObjects/Tilemaps/SweeperTiles.tres" id="4_wq2ky"]
[ext_resource type="Script" uid="uid://ceydlmg8rbpsi" path="res://Scripts/MenuBoard.gd" id="5_uth7j"]

[node name="Title" type="Node2D"]
script = ExtResource("1_aa56r")

[node name="titleUI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="titleUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -85.0
offset_right = 87.5
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="openPlayMenu" type="Button" parent="titleUI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Play!"

[node name="logoRect" type="TextureRect" parent="titleUI"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -337.0
offset_top = 23.0
offset_right = 336.0
offset_bottom = 135.0
grow_horizontal = 2
texture = ExtResource("2_agd63")

[node name="playPanel" type="PanelContainer" parent="titleUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.5
offset_top = -158.25
offset_right = 278.5
offset_bottom = 158.25
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="titleUI/playPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="titleUI/playPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="titleUI/playPanel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100
alignment = 1

[node name="easySelect" type="Button" parent="titleUI/playPanel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_mh4yb")
text = "Easy"

[node name="mediumSelect" type="Button" parent="titleUI/playPanel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_mh4yb")
text = "Medium
"

[node name="hardSelect" type="Button" parent="titleUI/playPanel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("3_mh4yb")
text = "Hard
"

[node name="MarginContainer2" type="MarginContainer" parent="titleUI/playPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="titleUI/playPanel/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="VBoxContainer" type="VBoxContainer" parent="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="difficultyDetails" type="Label" parent="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Grid Size: 9x9
Mine Amount: 10"

[node name="startGame" type="Button" parent="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Start!"

[node name="exitMenu" type="Button" parent="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
text = "Exit Menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 22

[node name="gamemode" type="OptionButton" parent="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1
selected = 0
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "Classic"
popup/item_0/id = 0
popup/item_1/text = "Timed (WIP)"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Enemies (WIP)"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="gamemodeDetails" type="Label" parent="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Classic minesweeper 
gameplay! Flag tiles, 
check the numbers, 
dont click a mine!"

[node name="MarginContainer" type="MarginContainer" parent="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 85

[node name="fakeMineLayer" type="TileMapLayer" parent="."]
z_index = -1
texture_filter = 1
scale = Vector2(3, 3)
tile_set = ExtResource("4_wq2ky")
script = ExtResource("5_uth7j")

[node name="camera" type="Camera2D" parent="."]

[connection signal="pressed" from="titleUI/VBoxContainer/openPlayMenu" to="." method="_on_open_play_menu_pressed"]
[connection signal="pressed" from="titleUI/playPanel/VBoxContainer/MarginContainer/HBoxContainer/easySelect" to="." method="_on_easy_select_pressed"]
[connection signal="pressed" from="titleUI/playPanel/VBoxContainer/MarginContainer/HBoxContainer/mediumSelect" to="." method="_on_medium_select_pressed"]
[connection signal="pressed" from="titleUI/playPanel/VBoxContainer/MarginContainer/HBoxContainer/hardSelect" to="." method="_on_hard_select_pressed"]
[connection signal="pressed" from="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/startGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="titleUI/playPanel/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/exitMenu" to="." method="_on_exit_menu_pressed"]
